<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/resim13"
    tools:context=".MainActivity5">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="18dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="30dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress2"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.28"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.22000003"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/islem"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19999999" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:background="@drawable/button"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="25dp"
            android:text="@string/islem1"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="204dp" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginBottom="25dp"
            android:text="@string/islem2"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="275dp" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginBottom="25dp"
            android:text="@string/islem3"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="349dp" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginBottom="25dp"
            android:text="@string/islem4"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="408dp" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:text="@string/islem5"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="482dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="124dp"
        android:background="@drawable/button"
        android:onClick="gonder5"
        android:text="@string/islemonay"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.206" />


</androidx.constraintlayout.widget.ConstraintLayout>