<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/resim13"
    tools:context=".uye_anasayfa">


    <Button
        android:id="@+id/button4"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginBottom="344dp"
        android:background="@drawable/button"
        android:onClick="gonder_uye_anasayfa"
        android:text="@string/randevual"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.144" />

    <Button
        android:id="@+id/randevularim"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginBottom="476dp"
        android:background="@drawable/button"
        android:text="@string/randevularım"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.16000003" />

    <Button
        android:id="@+id/iletisim"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/button"
        android:text="@string/iletisim"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:onClick="gonder_iletisim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iletisim" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/renk2"
        android:textSize="1dp"
        app:layout_constraintBottom_toTopOf="@+id/randevularim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>